[gd_scene load_steps=2 format=3 uid="uid://86agcslpkfho"]

[ext_resource type="Script" path="res://scripts/ui/journal_menu/journal_menu.gd" id="1_ao0i1"]

[node name="JournalMenu" type="CanvasLayer"]
script = ExtResource("1_ao0i1")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(360, 360)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Journal"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntryContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
